--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@types/uuid": "^9.0.3",
     "autoprefixer": "10.4.14",
     "cross-env": "^7.0.3",
-    "eslint": "8.42.0",
+    "eslint": "^8.42.0",
     "eslint-config-next": "13.4.4",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "4.2.1",
