--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
     "@next/bundle-analyzer": "^14.0.4",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.10.4",
@@ -43,10 +44,11 @@
     "@types/uuid": "^9.0.3",
     "autoprefixer": "10.4.14",
     "cross-env": "^7.0.3",
-    "eslint": "^8.42.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "13.4.4",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "4.2.1",
+    "globals": "^15.10.0",
     "globby": "^14.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
@@ -54,7 +56,8 @@
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "3.3.0",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "typescript-eslint": "^8.8.0"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx)": [
